--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,8 @@
     <wb-module deploy-name="TokyoBowl">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+<wb-resource deploy-path="/WEB-INF/classes" source-path="/main"/>
+<wb-resource deploy-path="/WEB-INF/classes" source-path="/test"/>
         <property name="context-root" value="TokyoBowl"/>
         <property name="java-output-path" value="/TokyoBowl/build/classes"/>
     </wb-module>
